# WhatCarShouldIGet

./: Makefile
backend/: .gitignore  Makefile  pyproject.toml  pyrightconfig.json  ruff.toml
backend/core/: settings.py
backend/src/assistant/: cgrag.py  config.py  retriever.py  transformer.py
backend/src/core/: settings.py  urls.py
backend/src/ffi/bert_token_counter/: Cargo.toml  main.py
backend/src/ffi/bert_token_counter/src/: lib.rs
backend/src/libs/: tokenizer.py
backend/src/rest/: urls.py  views.py
frontend/: Cargo.toml  index.html  package.json
frontend/assets/: main.css  tailwind.css
frontend/src/: main.rs
